add transaction history
