# backend/src/routes/transactionRoutes.js
@@ -4,4 +4,6 @@ const transactionController = require('../controllers/transactionController');
 
 router.post('/transactions', transactionController.createTransaction);
 
+router.get('/accounts/:accountId/transactions', transactionController.getTransactionsByAccountId)
+
 module.exports = router;
